--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -11,7 +11,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: var(--light-background-secondary);
+  background: var(--background-secondary);
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
@@ -20,7 +20,7 @@
   appearance: none;
 
   :global .dark-theme :local & {
-    background: var(--dark-background-secondary);
+    background: var(--background-secondary);
   }
 
   + .button {
