--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -9,10 +9,10 @@
   }
 
   &:not(:last-of-type) {
-    border-bottom: 1px solid var(--light-border-color);
+    border-bottom: 1px solid var(--border-color);
 
     :global .dark-theme :local & {
-      border-color: var(--dark-border-color);
+      border-color: var(--border-color);
     }
   }
 
